# picocoin

./: .gitignore  configure.ac
contrib/debian/: control
debian/: changelog  control  copyright  picocoin.1  picocoin.install  picocoin.manpages  rules  shlibs.libccoin  shlibs.local  watch
debian/patches/: 0001-adding-library-version-info.patch  0001-adding-proper-version-numbers-to-soname.patch  0001-appending-ccoin_-to-operator-names.patch  0001-redoing-patches-from-scratch.patch  0002-appending-ccoin_-to-operator-names.patch  0002-changed-operator-names-in-order-to-be-compatible-wit.patch  0002-updating-soname.patch  0003-adding-static-linking-to-binaries-to-eliminate-need-.patch  0003-changed-OP-to-ccoin_OP.patch  0003-fixing-operator-names-NOP.patch  0004-fixed-compile-issues-with-ccoin_-prefix.patch  0004-fixing-operator-names-NOP.patch  0004-fixing-soname-number.patch  0004-undoing-linking-change-to-binaries.patch  0005-fixing-soname-package-name.patch  0005-fixing-soname-problem.patch  0005-removing-aes-util-temporarily-in-order-to-get-an-arm.patch  0006-appending-ccoin_-to-operator-names.patch  0006-changing-library-name-to-match-soname.patch  0006-fixed-compile-issues-with-ccoin_-prefix.patch  0006-updating-with-proper-OP-prefix.patch  (+3 more)
lib/: Makefile.am  block.c  core.c  key.c  script.c  script_eval.c  script_names.c  script_sign.c
src/: Makefile.am  blkstats.c  brd.c
test/: Makefile.am  aes-util.c  libtest.c  script-parse.c  script.c  script_invalid.json  script_valid.json  tx-valid-uahf.c  tx_invalid.json  tx_valid.json  uahf-script.c  uahf-sighash.c
(+9 files in other folders)
